--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1,3 +1,12 @@
 .logo {
     width: 60px;
 }
+
+.autocomplete-input span{
+    width: 100%;
+}
+.autocomplete-input input{
+    width: 100%;
+    border-radius: .375rem;
+    border-color: #d1d5db;
+}
